# mcx

./: .gitattributes  .gitignore  Cargo.toml  README.md  mcx.toml
.github/workflows/: binstall.yml  release.yml  rust.yml
src/: cli.rs  config.rs  init.rs  main.rs  mcx.toml  modrinth.rs  mods.rs  pack.rs  run.rs  versions.rs
src/loaders/: fabric.rs  forge.rs  mod.rs  neoforge.rs  vanilla.rs
src/responses/: forge.json
src/versions/: fabric.rs  neoforge.rs  vanilla.rs
