[package]
name = "mcx"
version = "0.1.3"
edition = "2021"
authors = ["Shuflduf <shuflduf@shuflduf.xyz>"]
description = "A Minecraft server manager"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Shuflduf/mcx"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
inquire = "0.7.5"
reqwest = "0.12.14"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
