[package]
name = "mcx"
version = "1.0.0"
edition = "2021"
authors = ["Shuflduf <shuflduf@shuflduf.xyz>"]
description = "A Minecraft server manager"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Shuflduf/mcx"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.46", features = ["derive"] }
color-eyre = "0.6.5"
inquire = "0.9.1"
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
# strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
